--- a/src/pages/pagina3/pagina3.html
+++ b/src/pages/pagina3/pagina3.html
@@ -1,18 +1,18 @@
-<!--
-  Generated template for the Pagina3Page page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>pagina3</ion-title>
+    <ion-title>{{ this.mutante.nombre }}</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+<h3>{{ this.mutante.poder }}</h3>
+
+<button ion-button block color="primary" (click)="irAtras()">Ir atrás con evento</button>
+<button ion-button block color="secondary" (click)="irRoot()">Ir al root</button>
+<button ion-button block color="danger" navPop>Ir atrás sin evento</button>
 
 </ion-content>
