--- a/src/pages/principal/principal.html
+++ b/src/pages/principal/principal.html
@@ -1,20 +1,14 @@
-<!--
-  Generated template for the PrincipalPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>Principal - Root</ion-title>
   </ion-navbar>
 
 </ion-header>
 
-
 <ion-content padding>
 
-  <h1>Root</h1>
+  <button ion-button block color="primary" (click)="navegarPagina()">Ir página 2</button>
+  <button ion-button block color="secondary" [navPush]="pagina2">Ir página 2 - HTML</button>
 
 </ion-content>
