Modal - Crear, enviar y recibir parámetros.

--- a/src/pages/ajustes/ajustes.html
+++ b/src/pages/ajustes/ajustes.html
@@ -13,4 +13,8 @@
     Activar Principal
   </button>
 
+  <button ion-button color="morado" block (click)="mostrar_modal()">
+    Mostrar modal
+  </button>
+
 </ion-content>
